--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
               <p>Welcome to Alluris Cosmetics <span>since 2024</span></p>
             </div>
             <div class="col-md-6 pull-right text-right col-sm-12">
-              <p>Global Certificate: <span>ISO 9001:2016</span></p>
+              <!-- <p>Global Certificate: <span>ISO 9001:2016</span></p> -->
             </div>
           </div>
         </div>
