--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
             <div class="thm-container">
               <div class="box valign-top">
                 <div class="content text-left pull-left">
-                  <h1 data-animation="animated fadeInLeft" class="bnrfnt40">providing Good<br>Technolgy Solutions</h1><span class="line"></span>
-                  <p data-animation="animated fadeInRight" class="pln_he">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br>eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br>enim ad minim.</p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn btn0">learn more</a><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
+                  <h1 data-animation="animated fadeInLeft" class="bnrfnt40">Global Third-Party<br>Cosmetic Manufacturing</h1><span class="line"></span>
+                  <p data-animation="animated fadeInRight" class="pln_he">Discover Quality Solutions for Your Brand's Cosmetic Needs. <br>Partner with Industry Experts for Reliable Production. <br></p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn btn0">learn more</a><a data-animation="animated fadeInUp" href="solutions.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
                 </div>
               </div>
             </div>
@@ -158,7 +158,7 @@
             <div class="thm-container">
               <div class="box valign-top">
                 <div class="content text-left pull-left">
-                  <h1 data-animation="animated fadeInLeft" class="bnrfnt40">A complete line of<br>products is available</h1><span class="line"></span>
+                  <h1 data-animation="animated fadeInLeft" class="bnrfnt40">Custom Formulations &  <br>Expert Guidance</h1><span class="line"></span>
                   <p data-animation="animated fadeInRight" class="pln_he">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br>eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br>enim ad minim.</p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn btn0">learn more</a><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
                 </div>
               </div>
@@ -185,10 +185,9 @@
     <section class="container ind-common-pad2 clearfix">
       <div class="quality-wrapper text-center">
         <div class="vision tab-panel fade in">
-          <h2>A hight level Quality Control in compliance with National and In International regulations and standards</h2>
+          <h2>A Global Manufacturer in Cosmetics and Pharmaceuticals</h2>
           <p>
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Consect petur adipiscing elit. Duis aute irure dolor in reprehenderit in voluptate
-            velit esse cillum dolore eu fugiat nulla pariatur.
+            At Alluris Cosmetics, we specialize in crafting custom cosmetics that reflect your brand's identity and vision. Our experienced team works closely with each client, providing personalized guidance and support throughout the manufacturing process. Whether you're a startup looking to launch your first product or an established brand seeking to expand your product line, we are here to help you succeed.
           </p>
         </div>
         <div class="values tab-panel fade hide">
@@ -353,7 +352,7 @@
       <div class="container clearfix">
         <div class="row">
           <div class="widget about-us-widget col-md-3 col-sm-6"><a href="#"><img src="images/header/logo-2.png" alt=""></a>
-            <p>Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ali qua. Ut enim ad minim.</p><a href="about.html">Read More <i class="fa fa-angle-double-right"></i></a>
+            <p>We specialize in producing high-quality cosmetics for brands of all sizes. With years of experience in the industry, we understand the importance of quality, innovation, and timely delivery. Our dedicated team of experts is here to help bring your vision to life, ensuring that your products stand out in the competitive beauty market.</p><a href="about.html">Read More <i class="fa fa-angle-double-right"></i></a>
             <ul class="nav">
               <li><a href="https://www.instagram.com/alluriscosmetics/"><i class="fa fa-instagram"></i></a></li>
               <li><a href="https://www.linkedin.com/in/alluriscosmetics/"><i class="fa fa-linkedin-square"></i></a></li>
