--- a/faq.html
+++ b/faq.html
@@ -108,8 +108,8 @@
                         </li>
                         <li class="has-t-submenu"><a href="solutions.html">solutions</a>
                           <ul class="submenu">
-                            <li><a href="meterial.html">meterial engineering</a></li>
-                            <li><a href="agricultural.html">agricultural processing</a></li>
+                            <li><a href="contract.html">Contract Manufacturing</a></li>
+                            <li><a href="custom.html">Custom Formulation</a></li>
                             <li><a href="mechanical.html">Mechanical engineering</a></li>
                             <li><a href="chemical.html">chemical research</a></li>
                             <li><a href="power.html">power and energy</a></li>
