--- a/about.html
+++ b/about.html
@@ -187,7 +187,7 @@
                 <p>Our vision is to transform the cosmetics industry by becoming the most reliable and innovative partner for beauty brands globally.  We aspire to be the driving force behind the most successful and beloved cosmetic products in the market. Our goal is to inspire confidence and beauty in every individual, ensuring that our products not only enhance appearance but also contribute to overall well-being.</p>
                 <p>By nurturing creativity, collaboration, and sustainable practices, we aim to leave a lasting impact on the cosmetics industry, inspiring positive change and elevating beauty to new heights. Join Alluris Cosmetics on this journey towards a brighter, more beautiful future, where excellence in cosmetics manufacturing leads to endless possibilities and enduring success for our partners.</p>
                 <div class="row">
-                  <div class="col-sm-12 abot-img"><img src="images/about/abt-img1.jpg" alt="" class="img-responsive"><img src="images/about/abt-img2.jpg" alt="" class="img-responsive"></div>
+                  <div class="col-sm-12 abot-img"><img src="images/about/abt-img1.jpg" alt="" class="img-responsive"></div>
                 </div>
               </div>
               <div id="mission" class="single-tab-content tab-pane fade in active">
@@ -195,7 +195,7 @@
                 <p>At Alluris Cosmetics, we're committed to elevating the standards of third-party cosmetics manufacturing. With a focus on quality, customization, and transparency, we strive to exceed the expectations of our partners. From rigorous quality assurance measures to sustainable practices, we ensure that every product reflects the highest levels of excellence and integrity. </p>
                 <p>We believe in fostering collaborative partnerships built on trust, ethics, and continuous improvement, setting a new standard for the industry. Partner with us for a trusted, reliable, and forward-thinking cosmetics manufacturing partner.</p>
                 <div class="row">
-                  <div class="col-sm-12 abot-img"><img src="images/about/abt-img1.jpg" alt="" class="img-responsive"><img src="images/about/abt-img2.jpg" alt="" class="img-responsive"></div>
+                  <div class="col-sm-12 abot-img"><img src="images/about/abt-img2.jpg" alt="" class="img-responsive"></div>
                 </div>
               </div>
               <div id="vision" class="single-tab-content tab-pane fade">
@@ -203,7 +203,7 @@
                 <p>At Alluris Cosmetics, our mission is to empower beauty brands to thrive and succeed in the competitive cosmetics market. We believe in providing access to high-quality, innovative, and safe beauty products that inspire confidence and enhance individual beauty.</p>
                 <p>Driven by a passion for excellence and a dedication to innovation, we are committed to providing our clients with the tools, resources, and support they need to bring their vision to life. Our mission is to exceed our clients' expectations, delivering exceptional results that elevate their brands and delight their customers.</p>
                 <div class="row">
-                  <div class="col-sm-12 abot-img"><img src="images/about/abt-img1.jpg" alt=""><img src="images/about/abt-img2.jpg" alt=""></div>
+                  <div class="col-sm-12 abot-img"><img src="images/about/abt-img3.jpg" alt=""></div>
                 </div>
               </div>
             </div>
@@ -293,7 +293,7 @@
       <div class="container clearfix">
         <div class="row">
           <div class="widget about-us-widget col-md-3 col-sm-6"><a href="#"><img src="images/header/logo-2.png" alt=""></a>
-            <p>Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ali qua. Ut enim ad minim.</p><a href="about.html">Read More <i class="fa fa-angle-double-right"></i></a>
+            <p>We specialize in producing high-quality cosmetics for brands of all sizes. With years of experience in the industry, we understand the importance of quality, innovation, and timely delivery. Our dedicated team of experts is here to help bring your vision to life, ensuring that your products stand out in the competitive beauty market.</p><a href="about.html">Read More <i class="fa fa-angle-double-right"></i></a>
             <ul class="nav">
               <li><a href="https://www.instagram.com/alluriscosmetics/"><i class="fa fa-instagram"></i></a></li>
               <li><a href="https://www.linkedin.com/in/alluriscosmetics/"><i class="fa fa-linkedin-square"></i></a></li>
@@ -305,12 +305,12 @@
             <h4 class="widget_title">Our Solutions</h4>
             <div class="widget-contact-list row m0">
               <ul>
-                <li><a href="privatelabelling">- Private Labelling</a></li>
-                <li><a href="contractmanufacturing">- Contract Manufacturing</a></li>
-                <li><a href="custompackaging">- Custom Packaging Solutions</a></li>
-                <li><a href="regulatory">- Regulatory & Quality Compliances</a></li>
-                <li><a href="customformulation">- Custom Formulations</a></li>
-                <li><a href="exportservices">- Export Solutions</a></li>
+                <li><a href="private.html">- Private Labelling</a></li>
+                <li><a href="contract.html">- Contract Manufacturing</a></li>
+                <li><a href="custompackaging.html">- Custom Packaging Solutions</a></li>
+                <li><a href="regulatory.html">- Regulatory & Quality Compliances</a></li>
+                <li><a href="custom.html">- Custom Formulations</a></li>
+                <li><a href="export.html">- Export Solutions</a></li>
               </ul>
             </div>
           </div>
@@ -321,7 +321,7 @@
                 <li><a href="about.html">- About Us</a></li>
                 <li><a href="solutions.html">- Solutions</a></li>
                 <li><a href="products.html">- Products</a></li>
-                <li><a href="contact">- Contact Us</a></li>
+                <li><a href="contact.html">- Contact Us</a></li>
                
               </ul>
             </div>
