--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <div class="box valign-top">
                 <div class="content text-left pull-left">
                   <h1 data-animation="animated fadeInLeft" class="bnrfnt40">Global Third-Party<br>Cosmetic Manufacturing</h1><span class="line"></span>
-                  <p data-animation="animated fadeInRight" class="pln_he">Discover Quality Solutions for Your Brand's Cosmetic Needs. <br>Partner with Industry Experts for Reliable Production. <br></p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn btn0">learn more</a><a data-animation="animated fadeInUp" href="solutions.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
+                  <p data-animation="animated fadeInRight" class="pln_he">Discover Quality Solutions for Your Brand's Cosmetic Needs. <br>Partner with Industry Experts for Reliable Production. <br></p><a data-animation="animated fadeInUp" href="solutions.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
                 </div>
               </div>
             </div>
@@ -140,7 +140,7 @@
               <div class="box valign-top">
                 <div class="content text-left pull-left">
                   <h1 data-animation="animated fadeInLeft" class="bnrfnt40">Custom Formulations &  <br>Expert Guidance</h1><span class="line"></span>
-                  <p data-animation="animated fadeInRight" class="pln_he">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br>eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br>enim ad minim.</p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn btn0">learn more</a><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
+                  <p data-animation="animated fadeInRight" class="pln_he">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br>eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br>enim ad minim.</p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
                 </div>
               </div>
             </div>
@@ -152,7 +152,7 @@
               <div class="box valign-top">
                 <div class="content text-left pull-left">
                   <h1 data-animation="animated fadeInLeft" class="bnrfnt40">expert in welding<br>automation</h1><span class="line"></span>
-                  <p data-animation="animated fadeInRight" class="pln_he">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br>eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br>enim ad minim.</p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn btn0">learn more</a><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
+                  <p data-animation="animated fadeInRight" class="pln_he">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br>eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br>enim ad minim.</p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
                 </div>
               </div>
             </div>
@@ -210,7 +210,7 @@
               <div class="box-img"><img src="images/team/01.jpg" alt="">
                 <div class="caption">
                   <h2>Private Labelling</h2>
-                  <p>Tdolor sit amet, consectetur, adipis civelit sed quia non qui dolorem ipsum quia dolor sit amet, consectetur, adipis civelit. Red quia numquam.</p><a href="#">Read more</a>
+                  <p>We create custom cosmetic products that reflect your brand identity, ensuring every detail from ingredients to labeling exceeds industry standards.</p><a href="private.html">Read more</a>
                 </div>
               </div>
             </div>
@@ -218,7 +218,7 @@
               <div class="box-img"><img src="images/team/02.jpg" alt="">
                 <div class="caption">
                   <h2>Contract Manufacturing</h2>
-                  <p>Tdolor sit amet, consectetur, adipis civelit sed quia non qui dolorem ipsum quia dolor sit amet, consectetur, adipis civelit. Red quia numquam.</p><a href="#">Read more</a>
+                  <p>We create custom cosmetic products that reflect your brand identity, ensuring every detail from ingredients to labeling exceeds industry standards.</p><a href="contract.html">Read more</a>
                 </div>
               </div>
             </div>
@@ -226,7 +226,7 @@
               <div class="box-img"><img src="images/team/03.jpg" alt="">
                 <div class="caption">
                   <h2>Custom Packaging Solutions</h2>
-                  <p>Tdolor sit amet, consectetur, adipis civelit sed quia non qui dolorem ipsum quia dolor sit amet, consectetur, adipis civelit. Red quia numquam.</p><a href="#">Read more</a>
+                  <p>We offer a variety of packaging solutions to enhance your brand's appeal, guiding you through the selection process for a lasting consumer impression.</p><a href="custompackaging.html">Read more</a>
                 </div>
               </div>
             </div>
@@ -234,7 +234,7 @@
               <div class="box-img"><img src="images/team/04.jpg" alt="">
                 <div class="caption">
                   <h2>Regulatory & Quality Compliances</h2>
-                  <p>Tdolor sit amet, consectetur, adipis civelit sed quia non qui dolorem ipsum quia dolor sit amet, consectetur, adipis civelit. Red quia numquam.</p><a href="#">Read more</a>
+                  <p>We ensure your products meet the highest safety and quality standards, staying up-to-date with the latest industry regulations.</p><a href="regulatory.html">Read more</a>
                 </div>
               </div>
             </div>
@@ -242,7 +242,7 @@
               <div class="box-img"><img src="images/team/05.jpg" alt="">
                 <div class="caption">
                   <h2>Custom Formulations</h2>
-                  <p>Tdolor sit amet, consectetur, adipis civelit sed quia non qui dolorem ipsum quia dolor sit amet, consectetur, adipis civelit. Red quia numquam.</p><a href="#">Read more</a>
+                  <p>With our experienced chemists develop unique formulations that meet your specific requirements, using the latest innovations in cosmetic science.</p><a href="custom.html">Read more</a>
                 </div>
               </div>
             </div>
@@ -250,7 +250,7 @@
               <div class="box-img"><img src="images/team/06.jpg" alt="">
                 <div class="caption">
                   <h2>Export Solutions</h2>
-                  <p>Expanding your market reach globally? We also provide export solutions to help your products reach international markets smoothly and efficiently. </p><a href="#">Read more</a>
+                  <p>Expanding your market reach globally? We also provide export solutions to help your products reach international markets smoothly and efficiently. </p><a href="export.html">Read more</a>
                 </div>
               </div>
             </div>
@@ -307,7 +307,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 text-right">
-            <div class="req-button text-right"><a href="contact.html" class="submit">See More <i class="fa fa-arrow-right"></i></a></div>
+            <div class="req-button text-right"><a href="lightbox.html" class="submit">See More <i class="fa fa-arrow-right"></i></a></div>
           </div>
         </div>
       </div>
@@ -345,12 +345,12 @@
             <h4 class="widget_title">Our Solutions</h4>
             <div class="widget-contact-list row m0">
               <ul>
-                <li><a href="privatelabelling">- Private Labelling</a></li>
-                <li><a href="contractmanufacturing">- Contract Manufacturing</a></li>
-                <li><a href="custompackaging">- Custom Packaging Solutions</a></li>
-                <li><a href="regulatory">- Regulatory & Quality Compliances</a></li>
-                <li><a href="customformulation">- Custom Formulations</a></li>
-                <li><a href="exportservices">- Export Solutions</a></li>
+                <li><a href="private.html">- Private Labelling</a></li>
+                <li><a href="contract.html">- Contract Manufacturing</a></li>
+                <li><a href="custompackaging.html">- Custom Packaging Solutions</a></li>
+                <li><a href="regulatory.html">- Regulatory & Quality Compliances</a></li>
+                <li><a href="custom.html">- Custom Formulations</a></li>
+                <li><a href="export.html">- Export Solutions</a></li>
               </ul>
             </div>
           </div>
@@ -361,7 +361,7 @@
                 <li><a href="about.html">- About Us</a></li>
                 <li><a href="solutions.html">- Solutions</a></li>
                 <li><a href="products.html">- Products</a></li>
-                <li><a href="contact">- Contact Us</a></li>
+                <li><a href="contact.html">- Contact Us</a></li>
                
               </ul>
             </div>
