--- a/faq.html
+++ b/faq.html
@@ -153,28 +153,19 @@
           <div class="col-md-4 col-sm-12 pull-left">
             <div>
               <!-- Search-->
-              <div class="widget-search-blog">
-                <div class="row widget-inner">
-                  <form action="#" method="get" class="search-form">
-                    <div class="input-group">
-                      <input type="search" placeholder="Enter Search keywords" class="form-control"><span class="input-group-addon">
-                        <button type="submit"><i class="icon icon-Search"></i></button></span>
-                    </div>
-                  </form>
-                </div>
-              </div>
+              
               <div class="single-sidebar-widget">
                 <div class="sec-title">
                   <h2><span>Solutions</span></h2>
                 </div>
                 <div class="categories">
                   <ul>
-                    <li><a href="#">Private Labelling</a></li>
-                    <li><a href="#">Contract Manufacturing</a></li>
-                    <li><a href="#">Custom Packaging Solutions</a></li>
-                    <li><a href="#">Regulatory & Quality Complainces</a></li>
-                    <li><a href="#">Custom Formulations</a></li>
-                    <li><a href="#">Export Solutions</a></li>
+                    <li><a href="private.html">Private Labelling</a></li>
+                    <li><a href="contract.html">Contract Manufacturing</a></li>
+                    <li><a href="custompackaging.html">Custom Packaging Solutions</a></li>
+                    <li><a href="regulatory.html">Regulatory & Quality Complainces</a></li>
+                    <li><a href="custom.html">Custom Formulations</a></li>
+                    <li><a href="export.html">Export Solutions</a></li>
                   </ul>
                 </div>
               </div>
