--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
             <div class="thm-container">
               <div class="box valign-top">
                 <div class="content text-left pull-left">
-                  <div><h1 style="color: black;" data-animation="animated fadeInLeft" class="bnrfnt40">Global Third-Party<br>Cosmetic Manufacturing</h1></div><span class="line"></span>
-                  <p style="color: black;" data-animation="animated fadeInRight" class="pln_he">Discover Quality Solutions for Your Brand's Cosmetic Needs. <br>Partner with Industry Experts for Reliable Production. <br></p><a data-animation="animated fadeInUp" href="solutions.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
+                  <div><h1  data-animation="animated fadeInLeft" class="bnrfnt40">Global Third-Party<br>Cosmetic Manufacturing</h1></div><span class="line"></span>
+                  <p data-animation="animated fadeInRight" class="pln_he">Discover Quality Solutions for Your Brand's Cosmetic Needs. <br>Partner with Industry Experts for Reliable Production. <br></p><a data-animation="animated fadeInUp" href="solutions.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
                 </div>
               </div>
             </div>
@@ -139,8 +139,8 @@
             <div class="thm-container">
               <div class="box valign-top">
                 <div class="content text-left pull-left">
-                  <h1 style="color: black;" data-animation="animated fadeInLeft" class="bnrfnt40">Custom Formulations &  <br>Expert Guidance</h1><span class="line"></span>
-                  <p style="color: black;" data-animation="animated fadeInRight" class="pln_he">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br>eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br>enim ad minim.</p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
+                  <h1  data-animation="animated fadeInLeft" class="bnrfnt40">Custom Formulations &  <br>Expert Guidance</h1><span class="line"></span>
+                  <p  data-animation="animated fadeInRight" class="pln_he">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br>eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br>enim ad minim.</p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
                 </div>
               </div>
             </div>
@@ -151,8 +151,8 @@
             <div class="thm-container">
               <div class="box valign-top">
                 <div class="content text-left pull-left">
-                  <h1 style="color: black;" data-animation="animated fadeInLeft" class="bnrfnt40">expert in welding<br>automation</h1><span class="line"></span>
-                  <p style="color: black;" data-animation="animated fadeInRight" class="pln_he">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br>eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br>enim ad minim.</p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
+                  <h1  data-animation="animated fadeInLeft" class="bnrfnt40">expert in welding<br>automation</h1><span class="line"></span>
+                  <p  data-animation="animated fadeInRight" class="pln_he">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br>eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br>enim ad minim.</p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
                 </div>
               </div>
             </div>
