--- a/contact.html
+++ b/contact.html
@@ -167,7 +167,7 @@
                   <li class="item">
                     <div class="media">
                       <div class="media-left"><a href="#"><i class="fa fa-envelope-o"></i></a></div>
-                      <div class="media-body"><a href="mailto:alluriscosmetics@gmail.com">alluriscosmetics@gmail.com</a><a href="mailto:alluriscosmetics@gmail.com">alluriscosmetics@gmail.com</a></div>
+                      <div class="media-body"><a href="mailto:alluriscosmetics@gmail.com">alluriscosmetics@gmail.com</a></div>
                     </div>
                   </li>
                   <li class="item">
