Home Page Update

--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
         </div>
         <div class="vision-wrapper text-center">
           <ul>
-            <li><a id="vision" href="javascript:void(0)"><img src="images/services/ser-icon4.png" alt="">
+            <li><a id="vision" ><img src="images/services/ser-icon4.png" alt="">
                 <p>Vision</p></a></li>
-            <li><a id="values" href="javascript:void(0)"><img src="images/services/ser-icon5.png" alt="">
+            <li><a id="values" ><img src="images/services/ser-icon5.png" alt="">
                 <p>Mission</p></a></li>
-            <li><a id="mission" href="javascript:void(0)"><img src="images/services/ser-icon6.png" alt="">
+            <li><a id="mission" ><img src="images/services/ser-icon6.png" alt="">
                 <p>Commitment</p></a></li>
           </ul>
         </div>
