--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- Logo Section-->
       <div class="container">
         <div class="row pad-logo logo-wrapper">
-          <div class="col-lg-4 col-md-3 col-sm-12 col-xs-12 t-logo"><a href="index.html"><img src="images/home_page_variation5/logo.png" alt="logo" class="img-responsive"></a></div>
+          <div class="col-lg-4 col-md-3 col-sm-12 col-xs-12 t-logo"><a href="index.html"><img src="images/home_page_variation5/logo.jpg" alt="logo" class="img-responsive"></a></div>
           <div class="col-lg-8 col-md-9 col-sm-12 col-xs-12 text-right">
             <div class="top-two-right">
               <div class="req-button text-right"><a href="contact.html" class="submit">Contact Us</a></div>
@@ -52,7 +52,7 @@
                       <div class="media">
                         <div class="blue-color media-left"><a href="#"><i class="icon icon-Pointer"></i></a></div>
                         <div class="media-body">
-                          <p>13005 Greenville Avenue<br><span>California, TX 70240</span></p>
+                          <p>PAP-127, Taloja MIDC<br><span>Near Bel Naka, Panvel - 410 208.</span></p>
                         </div>
                       </div>
                     </li>
@@ -122,7 +122,7 @@
     <div id="minimal-bootstrap-carousel" data-ride="carousel" class="carousel slide carousel-fade shop-slider full_width ver_new_5_slider">
       <!-- Wrapper for slides-->
       <div role="listbox" class="carousel-inner">
-        <div style="background-image: url(images/home_page_variation5/slider/1.jpg);" class="item active">
+        <div style="background-image: url(images/home_page_variation5/slider/1.png);" class="item active">
           <div class="carousel-caption">
             <div class="thm-container">
               <div class="box valign-top">
@@ -134,25 +134,25 @@
             </div>
           </div>
         </div>
-        <div style="background-image: url(images/home_page_variation5/slider/2.jpg);" class="item">
+        <div style="background-image: url(images/home_page_variation5/slider/2.png);" class="item">
           <div class="carousel-caption">
             <div class="thm-container">
               <div class="box valign-top">
                 <div class="content text-left pull-left">
                   <h1  data-animation="animated fadeInLeft" class="bnrfnt40">Custom Formulations &  <br>Expert Guidance</h1><span class="line"></span>
-                  <p  data-animation="animated fadeInRight" class="pln_he">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br>eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br>enim ad minim.</p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
+                  <p  data-animation="animated fadeInRight" class="pln_he">Crafted solutions and personalized advice provided by seasoned professionals to <br> address your unique needs and challenges </p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div style="background-image: url(images/home_page_variation5/slider/3.jpg);" class="item">
+        <div style="background-image: url(images/home_page_variation5/slider/3.png);" class="item">
           <div class="carousel-caption">
             <div class="thm-container">
               <div class="box valign-top">
                 <div class="content text-left pull-left">
-                  <h1  data-animation="animated fadeInLeft" class="bnrfnt40">expert in welding<br>automation</h1><span class="line"></span>
-                  <p  data-animation="animated fadeInRight" class="pln_he">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br>eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br>enim ad minim.</p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
+                  <h1  data-animation="animated fadeInLeft" class="bnrfnt40">Glow with Our Innovative <br>Creations</h1><span class="line"></span>
+                  <p  data-animation="animated fadeInRight" class="pln_he">We're all about creating fresh, exciting products that stand out and make a difference.</p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
                 </div>
               </div>
             </div>
@@ -186,12 +186,12 @@
         </div>
         <div class="vision-wrapper text-center">
           <ul>
-            <li><a id="vision" ><img src="images/services/ser-icon4.png" alt="">
-                <p>Vision</p></a></li>
-            <li><a id="values" ><img src="images/services/ser-icon5.png" alt="">
-                <p>Mission</p></a></li>
-            <li><a id="mission" ><img src="images/services/ser-icon6.png" alt="">
-                <p>Commitment</p></a></li>
+            <li><img src="images/services/ser-icon4.png">
+                <p>Vision</p></li>
+            <li><img src="images/services/ser-icon5.png">
+                <p>Mission</p></li>
+            <li><img src="images/services/ser-icon6.png">
+                <p>Commitment</p></li>
           </ul>
         </div>
       </div>
@@ -371,7 +371,7 @@
             <div class="widget-contact-list row m0">
               <ul>
                 <li><i class="fa fa-map-marker"></i>
-                  <div class="fleft location_address">Lorance 542B, Tailstoi Town 5248 MT, Wordwide Country</div>
+                  <div class="fleft location_address">PAP-127, Taloja MIDC, Near Bel Naka, Panvel - 410 208.</div>
                 </li>
                 <li><i class="fa fa-phone"></i>
                   <div class="fleft contact_no"><a href="#">+91 90824 83668</a></div>
