--- a/private.html
+++ b/private.html
@@ -66,7 +66,7 @@
                       <div class="media">
                         <div class="blue-color media-left"><a href="#"><i class="icon icon-Pointer"></i></a></div>
                         <div class="media-body">
-                          <p>13005 Greenville Avenue<br><span>California, TX 70240</span></p>
+                         <p>PAP-127, Taloja MIDC<br><span>Near Bel Naka, Panvel - 410 208.</span></p>
                         </div>
                       </div>
                     </li>
@@ -262,7 +262,7 @@
             <div class="widget-contact-list row m0">
               <ul>
                 <li><i class="fa fa-map-marker"></i>
-                  <div class="fleft location_address">Lorance 542B, Tailstoi Town 5248 MT, Wordwide Country</div>
+                  <div class="fleft location_address">PAP-127, Taloja MIDC, Near Bel Naka, Panvel - 410 208.</div>
                 </li>
                 <li><i class="fa fa-phone"></i>
                   <div class="fleft contact_no"><a href="#">+91 90824 83668</a></div>
