--- a/contract.html
+++ b/contract.html
@@ -249,7 +249,7 @@
               <ul>
                 <li><a href="about.html">- About Us</a></li>
                 <li><a href="solutions.html">- Solutions</a></li>
-                <li><a href="products.html">- Products</a></li>
+                <li><a href="lightbox.html">- Products</a></li>
                 <li><a href="contact">- Contact Us</a></li>
                
               </ul>
