--- a/export.html
+++ b/export.html
@@ -177,11 +177,11 @@
                 <p>
                   <h3><span>Why Choose Our Export Solutions?</span></h3><br>
 
-                  We boast a deep understanding of international regulations and market trends, making us your trusted partner for successful global expansion. Our Export Solutions encompass a range of services including regulatory compliance, packaging and labeling optimization, market research, distribution network establishment, and more. We work closely with you to develop a customized export strategy aligned with your brand's vision and objectives. Whether you're targeting specific regions or aiming for a worldwide presence, we leverage our extensive network and industry expertise to help you navigate the complexities of international trade and achieve sustainable growth in global markets. Partner with us and unlock the full potential of your cosmetics brand on a global scale.
+                  <p>We boast a deep understanding of international regulations and market trends, making us your trusted partner for successful global expansion. Our Export Solutions encompass a range of services including regulatory compliance, packaging and labeling optimization, market research, distribution network establishment, and more. We work closely with you to develop a customized export strategy aligned with your brand's vision and objectives. Whether you're targeting specific regions or aiming for a worldwide presence, we leverage our extensive network and industry expertise to help you navigate the complexities of international trade and achieve sustainable growth in global markets. Partner with us and unlock the full potential of your cosmetics brand on a global scale. </p>
 
                   <h3><span>Partner with Us for Global Success</span></h3><br>
 
-                  Unlock new opportunities for your cosmetic brand with our reliable and efficient export solutions. Whether you're looking to enter emerging markets or expand your presence in established ones,  Alluris Cosmetics is your trusted partner every step of the way. Contact us today to learn more about how we can help your brand thrive on the global stage.
+                 <p> Unlock new opportunities for your cosmetic brand with our reliable and efficient export solutions. Whether you're looking to enter emerging markets or expand your presence in established ones,  Alluris Cosmetics is your trusted partner every step of the way. Contact us today to learn more about how we can help your brand thrive on the global stage. </p>
 
 
                 </p>
@@ -237,7 +237,7 @@
               <ul>
                 <li><a href="about.html">- About Us</a></li>
                 <li><a href="solutions.html">- Solutions</a></li>
-                <li><a href="products.html">- Products</a></li>
+                <li><a href="lightbox.html">- Products</a></li>
                 <li><a href="contact">- Contact Us</a></li>
                
               </ul>
