--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <div class="box valign-top">
                 <div class="content text-left pull-left">
                   <div><h1  data-animation="animated fadeInLeft" class="bnrfnt40">Global Third-Party<br>Cosmetic Manufacturing</h1></div><span class="line"></span>
-                  <p data-animation="animated fadeInRight" class="pln_he">Discover Quality Solutions for Your Brand's Cosmetic Needs. <br>Partner with Industry Experts for Reliable Production. <br></p><a data-animation="animated fadeInUp" href="solutions.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
+                  <p data-animation="animated fadeInRight" class="pln_he">Discover Quality Solutions for Your Brand's Cosmetic Needs. <br>Partner with Industry Experts for Reliable Production. <br></p><a data-animation="animated fadeInUp" href="solutions.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our services</a>
                 </div>
               </div>
             </div>
@@ -140,7 +140,7 @@
               <div class="box valign-top">
                 <div class="content text-left pull-left">
                   <h1  data-animation="animated fadeInLeft" class="bnrfnt40">Custom Formulations &  <br>Expert Guidance</h1><span class="line"></span>
-                  <p  data-animation="animated fadeInRight" class="pln_he">Crafted solutions and personalized advice provided by seasoned professionals to <br> address your unique needs and challenges </p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
+                  <p  data-animation="animated fadeInRight" class="pln_he">Crafted solutions and personalized advice provided by seasoned professionals to <br> address your unique needs and challenges </p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our services</a>
                 </div>
               </div>
             </div>
@@ -152,7 +152,7 @@
               <div class="box valign-top">
                 <div class="content text-left pull-left">
                   <h1  data-animation="animated fadeInLeft" class="bnrfnt40">Glow with Our Innovative <br>Creations</h1><span class="line"></span>
-                  <p  data-animation="animated fadeInRight" class="pln_he">We're all about creating fresh, exciting products that stand out and make a difference.</p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our sevices</a>
+                  <p  data-animation="animated fadeInRight" class="pln_he">We're all about creating fresh, exciting products that stand out and make a difference.</p><a data-animation="animated fadeInUp" href="about_us.html" class="view-all hvr-bounce-to-right slide_learn_btn btn">our services</a>
                 </div>
               </div>
             </div>
@@ -360,7 +360,7 @@
               <ul>
                 <li><a href="about.html">- About Us</a></li>
                 <li><a href="solutions.html">- Solutions</a></li>
-                <li><a href="products.html">- Products</a></li>
+                <li><a href="lightbox.html">- Products</a></li>
                 <li><a href="contact.html">- Contact Us</a></li>
                
               </ul>
