--- a/regulatory.html
+++ b/regulatory.html
@@ -176,17 +176,17 @@
                 <p>Our meticulous quality control measures commence with sourcing raw materials from trusted suppliers who uphold the highest quality standards. Throughout the manufacturing process, our experienced team follows Good Manufacturing Practices (GMP) to maintain consistency and purity. We conduct thorough testing at every stage, from formulation to packaging, to guarantee the safety and efficacy of our products. Additionally, our compliance team stays abreast of evolving regulations, ensuring that our products meet the latest requirements in every market we serve. Rest assured, when you partner with us, you can trust that your cosmetics are crafted with integrity and compliance at the forefront of our operations.</p>
 
                 <p><h3><span>Regulatory Compliance</span></h3><br>
-
-                  Our operational approach is informed by a thorough understanding of regulations at the local, regional, and international levels, covering a wide range of areas including:
+                 
+                  Our operational approach is informed by a thorough understanding of regulations at the local, regional, and international levels, covering a wide range of areas including: <br><br>
 
 
                     <b>FDA Regulations: </b> We adhere to the regulations set forth by the U.S. Food and Drug Administration (FDA), ensuring that all our products meet the highest standards of safety and labeling requirements.</br></br>
 
-                    <b>International Standards:</b> We stay updated on evolving regulations and standards globally, ensuring compliance with relevant guidelines such as ISO 22716 for Good Manufacturing Practices (GMP) in cosmetics manufacturing.</br></br>
+                    <b>International Standards:</b> We stay updated on evolving regulations and standards globally, ensuring compliance with relevant guidelines such as ISO 22716 for Good Manufacturing Practices (GMP) in cosmetics manufacturing.</br></br> 
 
                     <p><h3><span>Quality Assurance</span></h3><br>
 
-                      Quality is ingrained in our processes. Our commitment to quality assurance includes:
+                    Quality is ingrained in our processes. Our commitment to quality assurance includes: <br><br>
 
                     <b>Careful Raw Material Selection:</b> We source high-quality raw materials from trusted suppliers, ensuring purity, safety, and compliance with regulatory requirements.</br></br>
 
@@ -253,7 +253,7 @@
               <ul>
                 <li><a href="about.html">- About Us</a></li>
                 <li><a href="solutions.html">- Solutions</a></li>
-                <li><a href="products.html">- Products</a></li>
+                <li><a href="lightbox.html">- Products</a></li>
                 <li><a href="contact">- Contact Us</a></li>
                
               </ul>
