--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
     <section class="core-projects touch">
       <div class="sectpad touch_bg">
         <div class="container clearfix">
-          <h1>Connect with us now</h1>
+          <h1>Contact Us Now</h1>
           <p>Contact us today to discuss your cosmetics manufacturing needs and embark on a journey of beauty innovation.</p>
 
          <!-- <h6>Please be patient, We will get back to you. Our 24/7 Support, <span>General Inquireies Phone: + 0987 654 321</span></h6> -->
@@ -161,7 +161,7 @@
                   <li class="item">
                     <div class="media">
                       <div class="media-left"><a href="#"><i class="fa fa-map-marker"></i></a></div>
-                      <div class="media-body">Wood Workshop, 562, Mallin Street New Youk, NY 100 254</div>
+                      <div class="media-body">PAP-127, Taloja MIDC, Near Bel Naka, Panvel - 410 208.</div>
                     </div>
                   </li>
                   <li class="item">
@@ -181,9 +181,9 @@
             </div>
             <div class="col-md-8 input_form">
               <form id="contactForm" action="http://galaxyanalytics.net/demos/industrial/contact_process.php" method="post">
-                <input id="name" type="text" name="name" placeholder="First" class="form-control">
+                <input id="name" type="text" name="name" placeholder="Full Name" class="form-control">
                 <input id="email" type="email" name="email" placeholder="Email" class="form-control">
-                <input id="subject" type="text" name="subject" placeholder="Subject" class="form-control">
+                <input id="phone" type="text" name="phone" placeholder="Phone" class="form-control">
                 <textarea id="message" rows="6" name="message" placeholder="Message" class="form-control"></textarea>
                 <div class="row m0">
                   <button type="submit" class="btn btn-default submit">Submit Now <i class="fa fa-angle-double-right"></i></button>
@@ -200,9 +200,10 @@
         </div>
       </div>
     </section>
+    <!--
     <section id="map-area">
       <div id="contact-google-map" data-map-lat="-37.812802" data-map-lng="144.956981" data-icon-path="images/map/map-marker.png" data-map-title="Envato HQ" data-map-zoom="12" class="google-map"></div>
-    </section>
+    </section> -->
     <!-- Indurial Solution-->
     <section class="indurial-t-solution indurial-solution indpad anim-5-all indurial-t-solution3">
       <div class="container clearfix">
@@ -245,7 +246,7 @@
               <ul>
                 <li><a href="about.html">- About Us</a></li>
                 <li><a href="solutions.html">- Solutions</a></li>
-                <li><a href="products.html">- Products</a></li>
+                <li><a href="lightbox.html">- Products</a></li>
                 <li><a href="contact">- Contact Us</a></li>
                
               </ul>
