--- a/lightbox.html
+++ b/lightbox.html
@@ -544,6 +544,7 @@
                 <li><a href="solutions.html">- Solutions</a></li>
                 <li><a href="lightbox.html">- Products</a></li>
                 <li><a href="contact">- Contact Us</a></li>
+                <li><a href="privacy.html">- Privacy Policies</a></li>
                
               </ul>
             </div>
