--- a/privacy.html
+++ b/privacy.html
@@ -162,7 +162,7 @@
                 <h2>Privacy Policy</h2>
                 <p>Last updated: July 2024<br><br>
 
-                Welcome to Alluris Cosmetics (the "Company", "we", "our", "us"). We value your privacy and are committed to protecting your personal data. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website [website URL], use our services, or purchase our products.
+                Welcome to Alluris Cosmetics (the "Company", "we", "our", "us"). We value your privacy and are committed to protecting your personal data. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website www.alluriscosmetics.com, use our services, or purchase our products.
                 </p>
                 <p>
                   <b>1. Information We Collect</b> <br>
@@ -264,7 +264,7 @@
                 <li><a href="solutions.html">- Solutions</a></li>
                 <li><a href="lightbox.html">- Products</a></li>
                 <li><a href="contact.html">- Contact Us</a></li>
-                <li><a href="privacy.html">- Privacy Policies</a></li>
+                <li><a href="privacy.html">- Privacy Policy</a></li>
                
               </ul>
             </div>
