--- a/contract.html
+++ b/contract.html
@@ -251,7 +251,7 @@
                 <li><a href="solutions.html">- Solutions</a></li>
                 <li><a href="lightbox.html">- Products</a></li>
                 <li><a href="contact">- Contact Us</a></li>
-                <li><a href="privacy.html">- Privacy Policies</a></li>
+                <li><a href="privacy.html">- Privacy Policy</a></li>
                
               </ul>
             </div>
