--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                 <li><a href="solutions.html">- Solutions</a></li>
                 <li><a href="lightbox.html">- Products</a></li>
                 <li><a href="contact.html">- Contact Us</a></li>
-                <li><a href="privacy.html">- Privacy Policies</a></li>
+                <li><a href="privacy.html">- Privacy Policy</a></li>
                
               </ul>
             </div>
