--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
               <div class="box-img"><img src="images/team/02.jpg" alt="">
                 <div class="caption">
                   <h2>Contract Manufacturing</h2>
-                  <p>We create custom cosmetic products that reflect your brand identity, ensuring every detail from ingredients to labeling exceeds industry standards.</p><a href="contract.html">Read more</a>
+                  <p>We partner with brands to produce high-quality cosmetics to their specifications, handling every step from formulation to packaging with precision and care.</p><a href="contract.html">Read more</a>
                 </div>
               </div>
             </div>
